--- a/index.html
+++ b/index.html
@@ -2,93 +2,155 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="robots" content="noindex">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"/>
-    <title>Amaster | Web Development</title>
+  <meta charset="UTF-8">
+  <meta name="robots" content="noindex">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"/>
+  <title>Amaster | Web Development</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="img/favicon.png">
 </head>
 
 <body>
-<div id='wrap'>
+<main>
+  <input type='checkbox'>
+  <div class='back'>
+    <b>&larr;</b>
+  </div>
+  <div class='cv'>
+    <a href="cv/index.html"><b>CV</b></a>
+  </div>
+  <section>
+    <input checked='checked' id='rad1' name='rad' type='radio'>
+    <input id='rad2' name='rad' type='radio'>
+    <input id='rad3' name='rad' type='radio'>
+    <div class='nav'></div>
+    <div class='nav'></div>
+    <div class='nav'></div>
+    <div class='indicator'></div>
+    <div class='inner'>
+      <div class='content'>
+        <h1 data-splitting='chars'>Andrew Gordienko </h1>
+        <p>
+          <stron>Front-End Engineer</stron>
+        </p>
+        <p>I’m a perfectionist — a person over whom it is not necessary to stand with a whip, so I
+          do a job well :). I know how to find the best solution and I’m able to implement it.
+        </p>
+        <!--        <div class="photo"></div>-->
+      </div>
+      <div class='content'>
+        <h1 data-splitting='chars'>Technical Summary</h1>
+        <p>Hybrid mobile app, Web, W3C, Fully-responsive, user-friendly, cross-platform and
+          cross-browser solutions</p>
+        <p>Familiar with Scrum methodology</p>
+        <p>Highly experienced in team working</p>
+      </div>
+      <div class='content'>
+        <h1 data-splitting='chars'>Current position</h1>
+        <p><strong>KSF Technologies Ltd</strong>
+          <br>Dates of employment: June 2018 – Till now
+          <br>Job title: Front-End Engineer
+          <br>Role description: Full-time
+          <br>Tools and technologies: Angular 6, Ionic 4, Native Script, React Native
+        </p>
+      </div>
+      <div class='more'>
+        <b>&rarr;</b>
+        <b>&rarr;</b>
+        <b>&rarr;</b>
+      </div>
+      <div class='images'>
+        <div>
+          <div class='image'></div>
+        </div>
+        <div>
+          <div class='image'></div>
+        </div>
+        <div>
+          <div class='image'></div>
+        </div>
+      </div>
+    </div>
+    <div class='box'>
+      <div class='internal'>
+        <p>
+          Languages:
+          <br>
+          <small>Russian (native), English (intermediate)</small>
+          <br>Residence:
+          <br>
+          <small>Kyiv, Ukraine (GMT/UTC + 02:00)</small>
+          <br>Email:
+          <br>
+          <small>in@amaster.eu</small>
+          <br>Education:
+          <br>
+          <small>Dnipro National University (1994-1997) — Master of Philosophy (M.Phil.), PhD
+            student of Economics, PhD courses
+          </small>
+          <br>
+          <small>Dnipro National University (1987-1994) — Master of Education (M.Ed.), Master of
+            Engineering sciences, Faculty of Physics and Technology
+          </small>
+        </p>
+        <div class='image'></div>
+      </div>
+      <div class='internal'>
+        <p>
+          <strong>Main skills</strong>
+          <br>Programming languages:
+          <br>
+          <small>• JavaScript (ES 5/6/7, TypeSript, jQuery, Ajax, JSON)</small>
+          <br>
+          <small>• HTML (HTML 5, Pug, HTML Email Template)</small>
+          <br>
+          <small>• CSS (CSS 3/4, SCSS/SASS)</small>
+          <br>Frameworks:
+          <br>
+          <small>• Angular 6, Vue 2, Google AMP</small>
+          <br>
+          <small>• Ionic 4, Native Script, React Native</small>
+          <br>
+          <small>• Material Design, PrimeNG, Clarity, Metronic, Bootstrap 3/4</small>
+          <br>Operating systems:
+          <br>
+          <small>• macOS, Windows, Ubuntu</small>
+          <br>Software packages:
+          <br>
+          <small>• Git (GitHub, Bitbucket), Jira</small>
+          <br>
+          <small>• WebPack, Gulp, Grunt, Npm</small>
+          <br>
+          <small>• Photoshop, Illustrator, Scetch</small>
+        </p>
+        <div class='image'></div>
+      </div>
+      <div class='internal'>
+        <p>October 2017 – June 2018 (0.7 year) — FundsFlow, Sydney, AU (remote)
+          <br>
+          <small>Front-End Engineer</small>
+        </p>
 
-    <input type='checkbox'>
-    <div class='back'>
-        <b>&larr;</b>
+        <p>November 2016 – October 2017 (1.0 year) — W-Factory, Kiev
+          <br>
+          <small>Front-End / Full Stack Developer</small>
+        </p>
+
+        <p>January 2013 – September 2016 (3.7 year) — WebToolsGroup, New York, US (remote)
+          <br>
+          <small>Web Developer</small>
+        </p>
+        <div class='image'></div>
+      </div>
     </div>
-    <div class='frame'>
-        <input checked='checked' id='rad1' name='rad' type='radio'>
-        <input id='rad2' name='rad' type='radio'>
-        <input id='rad3' name='rad' type='radio'>
-        <div class='nav'></div>
-        <div class='nav'></div>
-        <div class='nav'></div>
-        <div class='indicator'></div>
-        <div class='inner'>
-            <div class='content'>
-                <h1 data-splitting='chars'>Nulla facilisi maecenas malesuada</h1>
-                <p>Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Integer
-                    tincidunt. Praesent turpis. Nulla neque dolor, sagittis eget, iaculis quis,
-                    molestie non, velit.</p>
-            </div>
-            <div class='content'>
-                <h1 data-splitting='chars'>Pellentesque commodo eros</h1>
-                <p>Morbi ac felis. Sed aliquam ultrices mauris. Quisque id odio. Cras sagittis.
-                    Fusce vulputate eleifend sapien.</p>
-            </div>
-            <div class='content'>
-                <h1 data-splitting='chars'>Fusce risus nisl viverra</h1>
-                <p>Vestibulum rutrum, mi nec elementum vehicula, eros quam gravida nisl, id
-                    fringilla neque ante vel mi. Quisque id odio. Fusce fermentum.</p>
-            </div>
-            <div class='more'>
-                <b>&rarr;</b>
-                <b>&rarr;</b>
-                <b>&rarr;</b>
-            </div>
-            <div class='images'>
-                <div>
-                    <div class='image'></div>
-                </div>
-                <div>
-                    <div class='image'></div>
-                </div>
-                <div>
-                    <div class='image'></div>
-                </div>
-            </div>
-        </div>
-        <div class='box'>
-            <div class='internal'>
-                <p>Sed mollis, eros et ultrices tempus, mauris ipsum aliquam libero, non adipiscing
-                    dolor urna a orci. Cras varius. Vivamus laoreet. Donec vitae sapien ut libero
-                    venenatis faucibus. Vestibulum turpis sem, aliquet eget, lobortis pellentesque,
-                    rutrum eu, nisl.</p>
-                <div class='image'></div>
-            </div>
-            <div class='internal'>
-                <p>Phasellus viverra nulla ut metus varius laoreet. Vestibulum turpis sem, aliquet
-                    eget, lobortis pellentesque, rutrum eu, nisl. Duis lobortis massa imperdiet
-                    quam. Aenean vulputate eleifend tellus. Morbi mollis tellus ac sapien.</p>
-                <div class='image'></div>
-            </div>
-            <div class='internal'>
-                <p>Praesent metus tellus, elementum eu, semper a, adipiscing nec, purus. Aenean
-                    commodo ligula eget dolor. Vestibulum fringilla pede sit amet augue. Fusce
-                    convallis metus id felis luctus adipiscing. Ut id nisl quis enim dignissim
-                    sagittis.</p>
-                <div class='image'></div>
-            </div>
-        </div>
-    </div>
-</div>
+  </section>
+</main>
 
 <script src='js/three.min.js'></script>
 <script src='js/OrbitControls.js'></script>
